# upca

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.h.in  example.cc  main.cc
3rd/: CMakeLists.txt
include/upca/: any  mckernel.h  upca.h
include/upca/arch/: aarch32.h  aarch64.h  arch.h  bgq.h  ppc.h  sparc.h  x86_64.h
include/upca/backends/: bgpm.h  jevents.h
src/: CMakeLists.txt
src/arch/: aarch32.cc  aarch64.cc  bgq.cc  x86_64.cc
